label daata export changes

--- a/Notebooks/3.generate_label.ipynb
+++ b/Notebooks/3.generate_label.ipynb
@@ -198,15 +198,22 @@
     "# gsize = 0.045\n",
     "\n",
     "# these value comes from the upscaled raster (Taken from QGIS)\n",
-    "min_lat = min_y = 5.366368082\n",
-    "max_lat = max_y = 20.625000000\n",
-    "min_lon = min_x = 97.03125\n",
-    "max_lon = max_x = 105.806600545\n",
+    "# min_lat = min_y = 5.366368082\n",
+    "# max_lat = max_y = 20.625000000\n",
+    "# min_lon = min_x = 97.03125\n",
+    "# max_lon = max_x = 105.806600545\n",
+    "\n",
+    "min_lat = min_y = 5.3762771618097744\n",
+    "max_lat = max_y = 20.6250000000000000\n",
+    "min_lon = min_x = 97.0312500000000000\n",
+    "max_lon = max_x = 105.7834755343458681\n",
     "\n",
     "limit = [min_lat, max_lat, min_lon, max_lon]\n",
     "\n",
-    "dx = 0.078125\n",
-    "dy = 0.0625"
+    "# dx = 0.078125\n",
+    "# dy = 0.0625\n",
+    "dx = 0.045\n",
+    "dy = 0.045"
    ]
   },
   {
@@ -768,7 +775,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
